# polyhedral-analysis

./: .coveragerc  .gitignore  .mypy.ini  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
docs/: Makefile  requirements.txt
docs/examples/: Polyhedra Assignment Example.ipynb  Polyhedra Properties.ipynb
docs/source/: conf.py  core-concepts.rst  getting-started.rst  index.rst  modules.rst  polyhedral_analysis.atom.rst  polyhedral_analysis.configuration.rst  polyhedral_analysis.coordination_polyhedron.rst  polyhedral_analysis.octahedral_analysis.rst  polyhedral_analysis.orientation_parameters.rst  polyhedral_analysis.polyhedra_recipe.rst  polyhedral_analysis.polyhedron_trajectory.rst  polyhedral_analysis.rotation_analyser.rst  polyhedral_analysis.rst  polyhedral_analysis.symmetry_measure.rst  (+2 more)
polyhedral_analysis/: __init__.py  atom.py  configuration.py  coordination_polyhedron.py  csm.py  octahedral_analysis.py  orientation_paramaters.py  orientation_parameters.py  plotting.py  polyhedra_recipe.py  polyhedron_trajectory.py  reference_geometries.py  rotation_analyser.py  rotational_order_parameters.py  symmetry_measure.py  trajectory.py  utils.py
tests/: test_atom.py  test_configuration.py  test_coordination_polyhedron.py  test_csm.py  test_octahedral_analysis.py  test_orientation_parameters.py  test_plotting.py  test_polyhedra_recipe.py  test_polyhedron_trajectory.py  test_reference_geometries.py  test_rotation_analyser.py  test_symmetry_measure.py  test_trajectory.py  test_utils.py
(+11 files in other folders)
