[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyhedral-analysis"
version = "0.3.0"
description = "A library for analysis of coordination polyhedra from molecular dynamics trajectories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Benjamin J. Morgan", email = "bjm42@bath.ac.uk"}]
dependencies = [
    "numpy",
    "pymatgen>=2024.7.18",
    "scipy",
    "vg",
    "monty",
    "tqdm",
    "cmcrameri",
    "bsym",
]

[project.urls]
Homepage = "https://github.com/bjmorgan/polyhedral-analysis"
Repository = "https://github.com/bjmorgan/polyhedral-analysis"

[tool.setuptools.packages.find]
exclude = ["docs", "tests*"]

[tool.coverage.run]
source = ["polyhedral_analysis"]
omit = [
    "*/python?.?/*",
    "*/lib-python/?.?/*.py",
    "*/lib_pypy/_*.py",
    "*/site-packages/ordereddict.py",
    "*/site-packages/nose/*",
    "*/unittest2/*",
    "docs/*",
]

[tool.mypy]

[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true
